Fix PHP notification width and image behaviour on mobile

--- a/style/seravo-notification.css
+++ b/style/seravo-notification.css
@@ -3,10 +3,22 @@
 */
 
 /* The notice bar */
-div.seravo-notice {
-  display: flex;
-  align-items: center;
-  box-shadow: 0 0 0 1px rgba(200,215,225,.5),0 1px 2px #e9eff3;
+
+@media only screen and (min-width: 600px) {
+  .seravo-notice {
+    display: flex;
+    align-items: center;
+    box-shadow: 0 0 0 1px rgba(200,215,225,.5),0 1px 2px #e9eff3;
+  }
+}
+
+@media only screen and (max-width: 784px) {
+  .seravo-notice {
+    margin-top: 5px;
+    margin-right: 15px;
+    margin-bottom: 2px;
+    margin-left: 15px;
+  }
 }
 
 /* Banner element containing the logo */
@@ -26,14 +38,15 @@ div.seravo-emblem {
 }
 
 /* Notice text content */
-div.seravo-notice-content {
-  display: flex;
-  padding-top: 1em;
-  padding-bottom:  1em;
-
+@media only screen and (min-width: 784px) {
+  div.seravo-notice-content {
+    display: flex;
+    padding-top: 1em;
+    padding-bottom:  1em;
+  }
 }
 
-svg {
+.seravo-logo {
   align-items: center;
   width: 100%;
   height: 100%;
